[package]
name = "blog_os"
version = "0.1.0"
authors = ["saitoumotoki"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.0", features=["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[package.metadata.bootimage]
test-args = [ "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false
